--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -38,7 +38,7 @@ h4{
 	display: flex;
 	flex-direction: column;
 	text-align: left;
-	ul, li, a{
+	ul, li a{
 		color: $white;
 		list-style-type: none;
 		padding: 3px 0px;
