--- a/scss/modules/_hero-slider.scss
+++ b/scss/modules/_hero-slider.scss
@@ -6,6 +6,8 @@
 .hero-container{
     height: 550px;
     background-image: url(../img/thumbnails/img1.png);
+    background-blend-mode: darken;
+    background-position: 50%;
     background-repeat: no-repeat;
     background-size:cover ;
     color: #fff;
@@ -16,6 +18,7 @@
     padding: 0px 15px;
     text-align: center;
     width: fit-content;
+
 }
 
 .hero-title{
